# SCRVS

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING_REPORT.md  FINAL_SUMMARY.md  LICENSE  Makefile  PRODUCTION_AUDIT_FINAL.md  QUICKSTART.md  README.md  REPOSITORY_AUDIT.md  SECURITY.md  coverage.xml  index.js  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
examples/: safe.sol  vulnerable.sol
solidity_scanner/: __init__.py  cli.py  logging_config.py  parser.py  reporter.py  utils.py
solidity_scanner/detectors/: __init__.py  bad_patterns.py  base.py  insecure_calls.py  reentrancy.py  validation.py
src/: utils.js
tests/: __init__.py  test_bad_patterns.py  test_edge_cases.py  test_integration.py  test_parser.py  test_reentrancy.py  test_reporter.py  test_validation.py
